# SN-Ia-Spectra-Host-Galaxy-Removal

./: .gitattributes  .gitignore  README.rst  pyproject.toml
examples/: example.py  example_kinney_sc_template.py  example_sb_host.py  example_sc_host.py
examples/data/: example_observed_spectrum.fits  kinney_sc_template.fits  sb_host_sn_spectrum.fits
host_removal/: __init__.py  host_removal.py  host_removal_emcee.py  host_removal_lin_alg.py
host_removal/data/sn-templates/: create_templates.py  create_templates_config.yaml  sn_template_phase_0.fits  template_parameters.fits
host_removal/data/sn-templates/templates/: sn_template_phase_-1.0 d_id_1268.fits  sn_template_phase_-1.0 d_id_1269.fits  sn_template_phase_-1.0 d_id_1270.fits  sn_template_phase_-1.0 d_id_1271.fits  sn_template_phase_-1.0 d_id_1272.fits  sn_template_phase_-1.0 d_id_1273.fits  sn_template_phase_-1.0 d_id_1274.fits  sn_template_phase_-1.0 d_id_134.fits  sn_template_phase_-1.0 d_id_135.fits  sn_template_phase_-1.0 d_id_136.fits  sn_template_phase_-1.0 d_id_137.fits  sn_template_phase_-1.0 d_id_138.fits  sn_template_phase_-1.0 d_id_139.fits  sn_template_phase_-1.0 d_id_140.fits  sn_template_phase_-1.0 d_id_1835.fits  sn_template_phase_-1.0 d_id_1836.fits  sn_template_phase_-1.0 d_id_1837.fits  sn_template_phase_-1.0 d_id_1838.fits  sn_template_phase_-1.0 d_id_1839.fits  sn_template_phase_-1.0 d_id_1840.fits  sn_template_phase_-1.0 d_id_1841.fits  sn_template_phase_-1.0 d_id_2402.fits  sn_template_phase_-1.0 d_id_2403.fits  (+3408 more)
host_removal/util/: conversions.py  input_output.py
